Fixed css3 icon being too high

--- a/src/pages/resume.scss
+++ b/src/pages/resume.scss
@@ -372,3 +372,7 @@ span .text {
 #github {
 	min-width: 100px;
 }
+
+#css3 {
+	max-height: 30px;
+}
